# caretta-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  tmp.md
.cargo/: config.toml
.github/workflows/: docker-publish.yml
caretta/: Cargo.toml  EBPF_DATA_COLLECTION.md  README.md  TESTING.md
caretta-common/: Cargo.toml
caretta-ebpf/: Cargo.toml
caretta-ebpf/src/: main.rs
caretta-k8s-core/src/: lib.rs  supervisor.rs
caretta/src/: btf.rs  config.rs  http_server.rs  lib.rs  main.rs  metrics.rs  per_cpu.rs  purge.rs  resolver.rs  types.rs
caretta/src/btf/: lookup.rs  parser.rs
caretta/src/resolver/: dns.rs  k8s.rs  mod.rs  static_resolver.rs
caretta/tests/: ebpf_program_types.rs  link_metrics.rs  resolver_invariants.rs  review_regressions.rs  state_table_gc.rs  to_delete_race.rs
crates/caretta-k8s-core/: Cargo.toml
crates/caretta-k8s-core/src/: owner.rs  watch.rs
deploy/: README.md  caretta-grafana-dashboard-configmap.yaml  caretta-rust-grafana-dashboard-configmap.yaml  caretta-rust-k8s.yaml  caretta-rust-observability-values.yaml  caretta.yaml
k8s-state/: Dockerfile
k8s-state/caretta-k8s-state/: Cargo.toml
k8s-state/caretta-k8s-state/src/: config.rs  events.rs  http_server.rs  main.rs  metrics.rs  owners.rs
network/: Dockerfile
network/caretta/: Cargo.toml  build.rs
network/caretta-ebpf/src/: main.rs
network/caretta/src/: config.rs  http_server.rs  main.rs  metrics.rs  per_cpu.rs  purge.rs  tables.rs  types.rs
network/caretta/src/btf/: lookup.rs  mod.rs
network/caretta/src/resolver/: k8s.rs
network/caretta/tests/: config_invariants.rs  connection_lifetime.rs  connection_retransmits.rs  connection_segs.rs  cookie_reverse_map.rs  e2e_retransmits.rs  e2e_srtt_segs.rs  ebpf_program_types.rs  guard_connection_srtt.rs  guard_link_metrics.rs  guard_state_table_gc.rs  resolver_invariants.rs  rmw_race.rs  unit_to_delete_race.rs
