[workspace]
resolver = "2"
members = [
	"crates/caretta-k8s-core",
	"network/caretta",
	"network/caretta-ebpf",
	"k8s-state/caretta-k8s-state",
]
default-members = ["network/caretta"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

# K8s 客户端栈:caretta 与 caretta-k8s-core 共用同一版本。
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.98.0", default-features = false, features = ["client", "rustls-tls"] }
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0", features = ["derive"] }

# 指标 / 单例 / 无锁快照:caretta 与 caretta-k8s-state 共用,防版本漂移。
prometheus = "0.13.4"
once_cell = "1.20.2"
arc-swap = "1.7"

[profile.release.package.caretta]
debug = 2
codegen-units = 1
