[package]
name = "caretta"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
caretta-k8s-core = { path = "../caretta-k8s-core" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
once_cell = "1.20.2"
prometheus = "0.13.4"
k8s-openapi = { workspace = true }
kube = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
lru = "0.12"
arc-swap = "1.7"
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
async-trait = "0.1"
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
] }
clap = { workspace = true, features = ["derive"] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
caretta-ebpf = { path = "../caretta-ebpf" }

# 显式声明 lib 目标:caretta 主交付物是 bin,但需要把"可独立测试的纯逻辑"暴露给
# integration tests(`tests/` 下的文件需要 `use caretta::...`)。lib + bin 双产物
# 在同一个 crate 里共存,bin 通过 `mod` 直接吃 src 下的同名文件,lib 通过 `pub mod`
# 选择性 re-export,二者不冲突。
[lib]
name = "caretta"
path = "src/lib.rs"

[[bin]]
name = "caretta"
path = "src/main.rs"
