[package]
name = "caretta-k8s-core"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
log = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
